--- a/package.json
+++ b/package.json
@@ -1,45 +1,1 @@
-{
-  "name": "front-site--investiment-market-search",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@radix-ui/react-slot": "^1.2.2",
-    "@tailwindcss/vite": "^4.1.6",
-    "@tanstack/react-query": "^5.76.1",
-    "axios": "^1.9.0",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.510.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "tailwind-merge": "^3.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.4"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.25.0",
-    "@tailwindcss/postcss": "^4.1.6",
-    "@types/node": "^22.15.18",
-    "@types/react": "^18.3.21",
-    "@types/react-dom": "^18.3.7",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^9.25.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^16.0.0",
-    "postcss": "^8.5.3",
-    "tailwindcss": "^4.1.6",
-    "tw-animate-css": "^1.2.9",
-    "typescript": "~5.8.3",
-    "typescript-eslint": "^8.30.1",
-    "vite": "^6.3.5"
-  }
-}
+{"name":"marketstack-explorer","private":true,"version":"1.0.0","description":"Interface moderna para pesquisa e análise de dados históricos de ações utilizando a API Marketstack","type":"module","scripts":{"dev":"vite","build":"tsc -b && vite build","lint":"eslint .","preview":"vite preview","analyze":"vite build --mode analyze","clean":"rimraf dist","typecheck":"tsc -b --noEmit","format":"prettier --write \"src/**/*.{ts,tsx,js,jsx,css,scss}\"","prepare":"husky"},"dependencies":{"@radix-ui/react-slot":"^1.2.2","@tailwindcss/vite":"^4.1.6","@tanstack/react-query":"^5.76.1","axios":"^1.9.0","class-variance-authority":"^0.7.1","clsx":"^2.1.1","lucide-react":"^0.510.0","react":"^18.3.1","react-dom":"^18.3.1","tailwind-merge":"^3.3.0","tailwindcss-animate":"^1.0.7","zod":"^3.24.4"},"devDependencies":{"@eslint/js":"^9.25.0","@tailwindcss/postcss":"^4.1.6","@types/node":"^22.15.18","@types/react":"^18.3.21","@types/react-dom":"^18.3.7","@typescript-eslint/eslint-plugin":"^8.32.1","@typescript-eslint/parser":"^8.32.1","@vitejs/plugin-react-swc":"^3.9.0","autoprefixer":"^10.4.21","eslint":"^9.25.0","eslint-plugin-react-hooks":"^5.2.0","eslint-plugin-react-refresh":"^0.4.19","globals":"^16.0.0","husky":"^9.1.7","lint-staged":"^16.0.0","postcss":"^8.5.3","prettier":"^3.5.3","prettier-plugin-tailwindcss":"^0.6.11","rimraf":"^6.0.1","rollup-plugin-visualizer":"^5.14.0","sharp":"^0.34.1","tailwindcss":"^4.1.6","tw-animate-css":"^1.2.9","typescript":"~5.8.3","typescript-eslint":"^8.30.1","vite":"^6.3.5","vite-plugin-compression":"^0.5.1","vite-plugin-image-optimizer":"^1.1.8","vite-plugin-pwa":"^1.0.0"}}
